fix/SR22S-48_theming-in-Card - fix double border property

--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -1,7 +1,6 @@
 .card {
   background-color: var(--color-white);
-  border: var(--border-width-m) solid;
-  border-color: var(--primary-color);
+  border: var(--border-width-m) solid var(--primary-color);
   border-radius: var(--border-radius-s);
   box-shadow: toRem(-20) toRem(20) 0 0 var(--color-grey-100);
   width: fit-content;
